# Deriv

./: .gitignore  Cargo.toml  README.md  analyze_v4.py  chk.py  find_pnl.py  model_v3_rl.onnx.data  query_losses.py  query_telemetry.py  run_demo.bat  strategy_config.json  temp_query.py
.agents/: roles.md
.agents/workflows/: autonomous-dev-light.md  autonomous-dev.md
bot_core/: Cargo.toml
bot_core/src/: lib.rs  traits.rs  types.rs
bot_core/src/ml/: onnx_runner.rs
bot_core/src/telemetry/: db.rs
connectors/: Cargo.toml
connectors/src/: deriv_ws.rs  lib.rs  symbols.rs
connectors/src/offline/: feeder.rs
dashboard/: package-lock.json  package.json
dashboard/src/: index.css
dashboard/src/components/: Dashboard.tsx
deriv-bot/: Cargo.toml
deriv-bot/src/: config.rs  main.rs
engines/: Cargo.toml
engines/src/: alpha.rs  lib.rs  risk.rs
engines/src/strategy/: bb.rs  breakout.rs  ensemble.rs  imbalance.rs  late_cycle.rs  lmsr.rs  macd.rs  mod.rs  mtf_playbook.rs  rsi.rs
runtime/: Cargo.toml
runtime/src/: contract_manager.rs  ledger.rs  lib.rs  settlement.rs  window.rs
scripts/: backtest_model.py  build_dataset.py  fetch_history.py  train.py  train_rl.py  train_v2.py
src/: config.rs  lib.rs  main.rs  server.rs  types.rs
src/app/: decision_engine.rs  executor.rs  mod.rs  recorder.rs  research.rs
src/execution/: trader.rs
src/market_data/: ticks.rs
src/observability/: db.rs  events.rs  metrics.rs  mod.rs
src/process/: mod.rs
src/protocol/: requests.rs  responses.rs
src/risk/: alpha.rs  kelly.rs  ledger.rs  limits.rs  mod.rs  prior.rs  settlement.rs
src/strategy/: mod.rs
src/transport/: mod.rs  router.rs  ws_client.rs
