[package]
name = "connectors"
version = "0.1.0"
edition = "2021"

[dependencies]
bot_core = { path = "../bot_core" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
